--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
     "@reduxjs/toolkit": "^2.1.0",
     "antd": "^5.14.0",
